Moved Transaction to it's own DAO, Service and test class